--- a/views/team.erb
+++ b/views/team.erb
@@ -5,10 +5,16 @@
   <title>Basketball Team</title>
  </head>
  <body>
- 
-
+  <!-- display the team members -->
+  <p>Team Name: <%=@player[:name]%></p><br>
+  <p>Coach: <%=@player[:coach]%></p><br>
+  <p>Point Guard: <%=@player[:pg]%></p><br>
+  <p>Shooting Guard: <%=@player[:sg]%></p><br>
+  <p>Power Forward: <%=@player[:pf]%></p><br>
+    <!-- YOU GUYS DIDNT RSPEC THIS VAR -->
+  <p>Small Forward: <%=@player[:sf]%></p><br>
+  <!-- YOU GUYS DIDNT RSPEC THIS VAR -->
+  <p>Center: <%=@player[:c]%></p><br>
 
  </body>
 </html>
-
-
