--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -5,7 +5,18 @@
   <title>Basketball Team Signup</title>
  </head>
  <body>
+   <!-- The form should have fields for: Team name ('name') Coach ('coach') Point Guard ('pg') Shooting Guard ('sg') Power Forward ('pf') Small Forward ('sf') Center ('c')-->
+   <form method="POST" action="/newteam">
+
+    <div><p>Team Name: <input type="TEXT" name="name"></input></p></div>
+    <div><p>Coach: <input type="TEXT" name="coach"></input></p></div>
+    <div><p>Point Guard: <input type="TEXT" name="pg"></input></p></div>
+    <div><p>Shooting Guard: <input type="TEXT" name="sg"></input></p></div>
+    <div><p>Power Forward: <input type="TEXT" name="pf"></input></p></div>
+    <div><p>Small Forward: <input type="TEXT" name="sf"></input></p></div>
+    <div><p>Center: <input type="TEXT" name="c"></input></p></div>
+    <div><button id="submit" title="Submit"></div>
+   </form>
+
  </body>
 </html>
-
-
